[package]
name = "nft-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
inindexer = { path = "../inindexer", features = [ "fastnear-data-server" ] }
async-trait = "0.1.80"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.21"
simple_logger = "4.3.3"
redis = { version = "0.25.3", features = [ "aio", "tokio-comp", "streams" ] }
